# social-media

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  social_media.postman_collection.json
migrations/: env.py
migrations/versions/: 0612a9dae6c9_add_friends_tables.py  127e66f76b3d_add_index_in_user.py  1fa392fd3da6_create_user_table.py  aea6c7a80576_added_post_table.py  e5a21dae777f_create_users_table.py  f5175fdb0589_create_dialogs_table.py
preparation/: create_db.sql  import.py
social_media/: main.py
social_media/api/: __init__.py  router.py
social_media/api/handlers/: __init__.py  dialogs.py  friends.py  posts.py  users.py
social_media/clients/redis/: __init__.py  api_client.py
social_media/core/: __init__.py  auth.py  clients.py  database.py  middlewares.py  settings.py
social_media/exceptions/: __init__.py
social_media/repositories/: __init__.py  base.py  dialog.py  friend.py  post.py  user.py
social_media/tables/: __init__.py  dialogs.py  enums.py  friend.py  post.py  schemas.py  user.py
social_media/tables/schemas/: __init__.py  dialog.py  post.py
social_media/validators/: __init__.py  friends.py  posts.py  users.py
