[tool.poetry]
name = "social-media"
version = "0.1.0"
description = "Social media"
authors = ["Ansima"]

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
