[tool.poetry]
name = "social-media"
version = "0.1.0"
description = "Social media"
authors = ["Ansima"]

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
SQLAlchemy = "^1.4.39"
databases = "^0.7.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
alembic = "^1.10.4"
greenlet = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
